--- a/package.json
+++ b/package.json
@@ -10,12 +10,15 @@
   "author": "Rinaldi Rizqi Fauzi",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "express": "^4.18.2",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.3",
     "hbs": "^4.2.0",
     "moment": "^2.30.1",
     "pg": "^8.11.3",
     "pg-hstore": "^2.3.4",
-    "sequelize": "^6.35.2"
+    "sequelize": "^6.35.2" 
   },
   "devDependencies": {
     "nodemon": "^3.0.2",
